676 - Move ComponentExecutionExcpetion from definition, allow components to just throw exceptions, catch them in the upstream and re-throw as ComponentExecutionExcpetions